# grey-parrot-rat

./: .gitignore  CMakeLists.txt
agent/: Agent.cpp  Agent.h  CMakeLists.txt  main.cpp
agent/app-info/: ApplicationDetails.h  agent-version.h.in  platform.h
agent/core/: AgentModulesManager.cpp  AgentModulesManager.h  AgentTasksManager.cpp  AgentTasksManager.h
agent/platform-info/: DeviceDetails.h
agent/platform-info/collectors/: LinuxInfoCollector.cpp  LinuxInfoCollector.h  WinInfoCollector.cpp  WinInfoCollector.h
bot/: Bot.cpp  Bot.h  CMakeLists.txt  bot-version.h.in  main.cpp  platform.h
bot/app-info/: ApplicationDetails.cpp  ApplicationDetails.h  bot-version.h.in  platform.h
bot/core/: AgentModulesManager.h  AgentTasksManager.h  TasksCreator.cpp  TasksCreator.h
bot/core/modules-managing/: ITaskDelegator.h  ModulesManager.cpp  ModulesManager.h
bot/core/networking/: C2ServerChannel.cpp  C2ServerChannel.h  ChannelState.h  ConnectionsManager.cpp  ConnectionsManager.h  ControlMessageHeader.cpp  ControlMessageHeader.h  IMessagesSender.h
bot/core/tasks-managing/: IResultHandler.h  ITasksRegister.h  TaskInfo.h  TasksManager.cpp  TasksManager.h  TasksMap.cpp  TasksMap.h
bot/platform-info/: DeviceDetails.h
bot/platform-info/collectors/: LinuxInfoCollector.h  WinInfoCollector.h
c2server/: .gitignore  build.gradle
c2server/src/main/java/alxdev/c2server/: C2serverApplication.java
c2server/src/main/java/alxdev/c2server/config/: WebSocketConfig.java
c2server/src/main/java/alxdev/c2server/models/: Agent.java  AgentInfo.java  BotControlMessageHeader.java
c2server/src/main/java/alxdev/c2server/models/proto/: Control.java  CoreData.java
c2server/src/main/java/alxdev/c2server/services/: ClientsSessionsHolder.java
c2server/src/main/java/alxdev/c2server/services/impl/: ClientsSessionsHolderBase.java
c2server/src/main/java/alxdev/c2server/ws/bot/: AgentHandshakeInterceptor.java  AgentWebSocketHandler.java  BotHandshakeInterceptor.java  BotWebSocketHandler.java
c2server/src/main/java/alxdev/c2server/ws/operator/: OperatorHandshakeInterceptor.java  OperatorWebSocketHandler.java
c2server/src/test/java/alxdev/c2server/: C2serverApplicationTests.java  NetworkingTests.java
cmake/: manage-3d-parties.cmake  utils.cmake
core-msgs/: CMakeLists.txt  messages.proto
docs/: networking.md
modules/: CMakeLists.txt
modules-sdk/: CMakeLists.txt  Module.cpp  Module.h  ModuleInfo.h  Task.h  TaskExecutor.cpp  TaskExecutor.h  TaskGenerator.cpp  TaskGenerator.h  TaskInfo.h  TaskResult.h  general-data.proto
modules/echo/: CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  EchoMaker.cpp  EchoMaker.h  EchoModuleBridge.cpp  EchoModuleBridge.h  EchoWidget.cpp  EchoWidget.h  EchoWidget.ui
modules/files-manager/: CMakeLists.txt  FilesManagerAgent.cpp  FilesManagerAgent.h  FilesManagerOperatorApp.cpp  FilesManagerOperatorApp.h  FilesManagerWidget.ui
modules/streamer/: CMakeLists.txt  StreamerWidget.cpp  StreamerWidget.h  StreamerWidget.ui  StreamsConsumer.cpp  StreamsConsumer.h  StreamsProducer.cpp  StreamsProducer.h
modules/tasks-manager/: CMakeLists.txt  ProcessManagerOperator.cpp  ProcessManagerOperator.h  RunningTasksWidget.cpp  RunningTasksWidget.h  RunningTasksWidget.ui  TaskDescription.h  TaskForm.cpp  TaskForm.h  TaskForm.ui  TasksManagerAgent.cpp  TasksManagerAgent.h
operator-app/: CMakeLists.txt  ConnectionChangeInfo.h  CoreCtrlBridge.cpp  CoreCtrlBridge.h  OperatorApp.cpp  OperatorApp.h  main.cpp  mainwindow.cpp  operator-app-version.h.in
operator-app/core/: OperatorModulesManager.cpp  OperatorModulesManager.h  OperatorTasksManager.cpp  OperatorTasksManager.h
operator-app/gui/: AgentDescriptionListItem.cpp  AgentDescriptionListItem.h  AgentDescriptionListItem.ui  ItemsListDialog.cpp  ItemsListDialog.h  ItemsListDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
rat-core-lib/: CMakeLists.txt  CoreUtils.cpp  CoreUtils.h  IControlPacketHandler.h  IControlPacketSender.h  ITaskHandler.h
rat-core-lib/modules-managing/: ModulesManagerBase.cpp  ModulesManagerBase.h
rat-core-lib/networking/: C2ServerChannel.cpp  C2ServerChannel.h  ChannelState.h  ConnectionsManager.cpp  ConnectionsManager.h  PeerData.h
rat-core-lib/proto/: .gitignore  control.proto  core-data.proto
rat-core-lib/tasks-managing/: TasksManagerBase.cpp  TasksManagerBase.h  TasksMap.cpp  TasksMap.h  TasksMapper.cpp  TasksMapper.h
